# phone-master

./: .gitignore  .phone-master.yaml.example  DEVELOPMENT.md  README.md  pyproject.toml  setup.sh
phone_master/: __init__.py  cli.py  version.py
phone_master/adb/: __init__.py  apk_finder.py  app_names.py  client.py  manager.py
phone_master/app_stores/: __init__.py  apkpure.py  chinese_stores.py  google_play.py  manager.py  tencent_myapp.py  uptodown.py
phone_master/config/: __init__.py  config.py
phone_master/models/: __init__.py  app.py
tests/: conftest.py  test_adb.py  test_cli.py  test_models.py
