[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phone-master"
version = "0.1.0"
description = "CLI tool to manage Android apps including Chinese app stores"
readme = "README.md"
requires-python = ">=3.8"
authors = [{name = "Your Name", email = "your.email@example.com"}]
license = {text = "MIT"}

dependencies = [
    "click>=8.1.0",
    "requests>=2.31.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "aiohttp>=3.8.0",
    "asyncio-contextmanager>=1.0.0",
    "pyyaml>=6.0",
    "colorama>=0.4.6",
    "tabulate>=0.9.0",
    "wcwidth>=0.2.0",
    "lxml>=4.9.0",
    "beautifulsoup4>=4.11.0",
    "playwright>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.scripts]
phonemaster = "phone_master.cli:main"

[tool.setuptools]
packages = ["phone_master"]

[tool.setuptools.package-data]
phone_master = ["config/*", "templates/*"]
